add round-robin manager (not supports process sleeping yet)

--- a/msp430/iar/430/6-round-robin/SConstruct
+++ b/msp430/iar/430/6-round-robin/SConstruct
@@ -31,8 +31,9 @@ ProjectName  = 'slon'
 RootDir      = '../../../../'                          
 SourceDirs   = ['src', 
                 RootDir + 'scmRTOS/core', 
+                RootDir + 'scmRTOS/port/msp430/iar',
                 RootDir + 'scmRTOS/ext/profiler', 
-                RootDir + 'scmRTOS/port/msp430/iar']
+                RootDir + 'scmRTOS/ext/round-robin']
 
 #--------------------------------------
 #
