fix 2-message-m3-stm32f1xx sample.
Removed some stuff from scmRTOS_TARGET_CFG.h. This stuff is
now moved to port.
Changed SysTick handler name to SysTick_Handler, as in port.

--- a/cortex/mx-gcc/2-message-m3-stm32f1xx/.project
+++ b/cortex/mx-gcc/2-message-m3-stm32f1xx/.project
@@ -81,14 +81,14 @@
 	</natures>
 	<linkedResources>
 		<link>
-			<name>SamplesCommon</name>
+			<name>common</name>
 			<type>2</type>
-			<locationURI>$%7BPARENT-1-PROJECT_LOC%7D/SamplesCommon</locationURI>
+			<locationURI>$%7BPARENT-1-PROJECT_LOC%7D/common</locationURI>
 		</link>
 		<link>
 			<name>scmRTOS</name>
 			<type>2</type>
-			<locationURI>$%7BPARENT-1-PROJECT_LOC%7D/scmRTOS</locationURI>
+			<locationURI>$%7BPARENT-3-PROJECT_LOC%7D/scmRTOS</locationURI>
 		</link>
 	</linkedResources>
 </projectDescription>
