--- a/cortex/mx-gcc/4-debug-m4-stm32f4xx/.project
+++ b/cortex/mx-gcc/4-debug-m4-stm32f4xx/.project
@@ -81,14 +81,14 @@
 	</natures>
 	<linkedResources>
 		<link>
-			<name>SamplesCommon</name>
+			<name>common</name>
 			<type>2</type>
-			<locationURI>$%7BPARENT-1-PROJECT_LOC%7D/SamplesCommon</locationURI>
+			<locationURI>$%7BPARENT-1-PROJECT_LOC%7D/common</locationURI>
 		</link>
 		<link>
 			<name>scmRTOS</name>
 			<type>2</type>
-			<locationURI>$%7BPARENT-1-PROJECT_LOC%7D/scmRTOS</locationURI>
+			<locationURI>$%7BPARENT-3-PROJECT_LOC%7D/scmRTOS</locationURI>
 		</link>
 	</linkedResources>
 </projectDescription>
