--- a/samples/cortex/mx-gcc/4-debug-m4-stm32f4xx/makefile
+++ b/samples/cortex/mx-gcc/4-debug-m4-stm32f4xx/makefile
@@ -93,7 +93,7 @@ endif
 	LD_SCRIPT	= $(PRJDIR)/$(CHIP).ld
 
 # scmRTOS dir
-	SCMDIR		= ../../../scmRTOS
+	SCMDIR		= ../../../../scmRTOS
 # lib dir
 	LIBDIR		= ../common
  
