--- a/samples/cortex/mx-gcc/6-custom-timer-m3-stm32f1xx/makefile
+++ b/samples/cortex/mx-gcc/6-custom-timer-m3-stm32f1xx/makefile
@@ -104,7 +104,7 @@ endif
 	LD_SCRIPT	= $(CHIP).ld
 
 # scmRTOS dir
-	SCMDIR		= ../../../scmRTOS
+	SCMDIR		= ../../../../scmRTOS
 	COMMON		= ../common
  
 # source directories (all *.c, *.cpp and *.S files included)
