--- a/samples/arm7/gcc/aduc70xx/2-message/makefile
+++ b/samples/arm7/gcc/aduc70xx/2-message/makefile
@@ -59,7 +59,7 @@
 	LD_SCRIPT	= $(PRJDIR)/ADUC7061-ROM.ld
 
 # scmRTOS dir
-	SCMDIR		= ../../../../scmRTOS
+	SCMDIR		= ../../../../../scmRTOS
 	COMMON		= ../common
 
 # files
