--- a/samples/arm7/gcc/lpc2xxx/1-event-flag/makefile
+++ b/samples/arm7/gcc/lpc2xxx/1-event-flag/makefile
@@ -55,7 +55,7 @@
 	LD_SCRIPT	= $(PRJDIR)/$(CHIP)-ROM.ld
 
 # dirs
-    SCMDIR      = ../../../../scmRTOS
+    SCMDIR      = ../../../../../scmRTOS
     COMMON      = ../common
 
 # files
