--- a/samples/cortex/mx-gcc/3-channel-m3-stm32f2xx/makefile
+++ b/samples/cortex/mx-gcc/3-channel-m3-stm32f2xx/makefile
@@ -88,7 +88,7 @@ endif
 	LD_SCRIPT	= $(PRJDIR)/$(CHIP).ld
 
 # scmRTOS dir
-	SCMDIR		= ../../../scmRTOS
+	SCMDIR		= ../../../../scmRTOS
 # lib dir
 	LIBDIR		= ../common
  
