--- a/samples/cortex/mx-gcc/4-debug-m3-lpc1766/makefile
+++ b/samples/cortex/mx-gcc/4-debug-m3-lpc1766/makefile
@@ -67,7 +67,7 @@
 	OK		= $(EXEDIR)/$(TARGET).ok
 
 # scmRTOS dir
-	SCMDIR		= ../../../scmRTOS
+	SCMDIR		= ../../../../scmRTOS
 #
 	COMMON	= ../common
 
