--- a/samples/cortex/mx-gcc/4-debug-m3-stm32f2xx/makefile
+++ b/samples/cortex/mx-gcc/4-debug-m3-stm32f2xx/makefile
@@ -87,7 +87,7 @@ endif
 	LD_SCRIPT	= $(PRJDIR)/$(CHIP).ld
 
 # scmRTOS dir
-	SCMDIR		= ../../../scmRTOS
+	SCMDIR		= ../../../../scmRTOS
 # lib dir
 	LIBDIR		= ../common
  
