--- a/samples/cortex/mx-gcc/5-suspended-m3-stm32f1xx/makefile
+++ b/samples/cortex/mx-gcc/5-suspended-m3-stm32f1xx/makefile
@@ -77,7 +77,7 @@
 	LD_SCRIPT	= $(PRJDIR)/$(CHIP).ld
 
 # scmRTOS dir
-	SCMDIR		= ../../../scmRTOS
+	SCMDIR		= ../../../../scmRTOS
 	COMMON		= ../common
  
 # source directories (all *.c, *.cpp and *.S files included)
