--- a/samples/msp430/gcc/430/2-message/makefile
+++ b/samples/msp430/gcc/430/2-message/makefile
@@ -50,7 +50,7 @@
 	OK		= $(EXEDIR)/$(TARGET).ok
 
 # scmRTOS dir
-	SCMDIR		= ../../../../scmRTOS
+	SCMDIR		= ../../../../../scmRTOS
 
 # files
 	DIRS	:= $(SRCDIR)
