correct project name in AVR (debug) sample)

--- a/samples/avr/iar/mega/4-debug/SConstruct
+++ b/samples/avr/iar/mega/4-debug/SConstruct
@@ -27,7 +27,7 @@ import scmIC
 #
 #     Project settings
 #
-ProjectName  = '4-channel'
+ProjectName  = '4-debug'
 
 RootDir      = '../../../../../'                          
 SourceDirs   = ['src',
